--- a/Project/TdGame/TdGame/TdGame.vcxproj.filters
+++ b/Project/TdGame/TdGame/TdGame.vcxproj.filters
@@ -170,5 +170,18 @@
     <ClInclude Include="banner.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="TdGame.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\icon.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
