--- a/Project/TdGame/TdGame/TdGame.vcxproj
+++ b/Project/TdGame/TdGame/TdGame.vcxproj
@@ -122,7 +122,7 @@
       <AdditionalIncludeDirectories>..\thirdparty\SDL2\include;..\thirdparty\SDL2_gfx\include;..\thirdparty\SDL2_image\include;..\thirdparty\SDL2_mixer\include;..\thirdparty\SDL2_ttf\include;..\thirdparty\cJSON\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
