--- a/TCP-IP Socket/win_socket/win_socket/win_socket.vcxproj
+++ b/TCP-IP Socket/win_socket/win_socket/win_socket.vcxproj
@@ -128,8 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="conv_addr_win.c" />
+    <ClCompile Include="endian_conv_win.c" />
     <ClCompile Include="hello_client_win.c" />
     <ClCompile Include="hello_server_win.c" />
+    <ClCompile Include="inet_adrconv_win.c" />
     <ClCompile Include="tcp_client_win.c" />
     <ClCompile Include="tcp_server_win.c" />
   </ItemGroup>
