echo server and client in windows

--- a/TCP-IP Socket/win_socket/win_socket/win_socket.vcxproj
+++ b/TCP-IP Socket/win_socket/win_socket/win_socket.vcxproj
@@ -129,6 +129,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="conv_addr_win.c" />
+    <ClCompile Include="echo_client_win.c" />
+    <ClCompile Include="echo_server_win.c" />
     <ClCompile Include="endian_conv_win.c" />
     <ClCompile Include="hello_client_win.c" />
     <ClCompile Include="hello_server_win.c" />
