--- a/Projects/SimpleHttp/SimpleHttp.vcxproj
+++ b/Projects/SimpleHttp/SimpleHttp.vcxproj
@@ -85,6 +85,9 @@
     <ClCompile>
       <CLanguageStandard>gnu11</CLanguageStandard>
     </ClCompile>
+    <Link>
+      <LibraryDependencies>pthread</LibraryDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
