--- a/Projects/CustomControls/IconFont/IconFont.vcxproj.filters
+++ b/Projects/CustomControls/IconFont/IconFont.vcxproj.filters
@@ -37,5 +37,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IconHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="IconHelper.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
 </Project>
