--- a/Projects/CustomControls/IconFont/IconFont.vcxproj
+++ b/Projects/CustomControls/IconFont/IconFont.vcxproj
@@ -71,7 +71,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -94,8 +94,12 @@
   <ItemGroup>
     <QtRcc Include="IconFont.qrc" />
     <QtMoc Include="Widget.h" />
+    <ClCompile Include="IconHelper.cpp" />
     <ClCompile Include="Widget.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="IconHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
