--- a/Projects/ReactorHttp/ReactorHttp.vcxproj
+++ b/Projects/ReactorHttp/ReactorHttp.vcxproj
@@ -82,12 +82,14 @@
     <ClCompile Include="main.c" />
     <ClCompile Include="PollDispatcher.c" />
     <ClCompile Include="SelectDispatcher.c" />
+    <ClCompile Include="WorkerThread.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Channel.h" />
     <ClInclude Include="ChannelMap.h" />
     <ClInclude Include="Dispatcher.h" />
     <ClInclude Include="EventLoop.h" />
+    <ClInclude Include="WorkerThread.h" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
