--- a/ReinventWheels/Grammar/Grammar.vcxproj.filters
+++ b/ReinventWheels/Grammar/Grammar.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Array.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Virtual.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
