--- a/ReinventWheels/Grammar/Grammar.vcxproj.filters
+++ b/ReinventWheels/Grammar/Grammar.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Virtual.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Emplace_back.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
