--- a/Projects/ReactorHttp/ReactorHttp.vcxproj
+++ b/Projects/ReactorHttp/ReactorHttp.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="EpollDispatcher.c" />
     <ClCompile Include="EventLoop.c" />
     <ClCompile Include="HttpRequest.c" />
+    <ClCompile Include="HttpResponse.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="PollDispatcher.c" />
     <ClCompile Include="SelectDispatcher.c" />
@@ -96,12 +97,17 @@
     <ClInclude Include="Dispatcher.h" />
     <ClInclude Include="EventLoop.h" />
     <ClInclude Include="HttpRequest.h" />
+    <ClInclude Include="HttpResponse.h" />
     <ClInclude Include="TcpConnection.h" />
     <ClInclude Include="TcpServer.h" />
     <ClInclude Include="ThreadPool.h" />
     <ClInclude Include="WorkerThread.h" />
   </ItemGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <CLanguageStandard>gnu11</CLanguageStandard>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
