--- a/Projects/ReactorHttp-Cpp/ReactorHttp-Cpp/ReactorHttp-Cpp.vcxproj
+++ b/Projects/ReactorHttp-Cpp/ReactorHttp-Cpp/ReactorHttp-Cpp.vcxproj
@@ -75,7 +75,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
-    <ClCompile Include="Buffer.c" />
+    <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="Channel.cpp" />
     <ClCompile Include="Dispatcher.cpp" />
     <ClCompile Include="EpollDispatcher.cpp" />
