--- a/Projects/ReactorHttp-Cpp/ReactorHttp-Cpp/ReactorHttp-Cpp.vcxproj
+++ b/Projects/ReactorHttp-Cpp/ReactorHttp-Cpp/ReactorHttp-Cpp.vcxproj
@@ -106,7 +106,11 @@
     <ClInclude Include="ThreadPool.h" />
     <ClInclude Include="WorkerThread.h" />
   </ItemGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Link>
+      <LibraryDependencies>pthread</LibraryDependencies>
+    </Link>
+  </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
