--- a/Projects/DDZ-Network/Client-ddz/ddz-client/windows/CMakeLists.txt
+++ b/Projects/DDZ-Network/Client-ddz/ddz-client/windows/CMakeLists.txt
@@ -2,6 +2,19 @@ cmake_minimum_required(VERSION 3.16)
 
 project(windows)
 
+# 取出当前目录下的所有头文件
+set(HEADERS
+    AnimationWindow.h
+    ButtonGroup.h
+    CardPanel.h
+    CountDown.h
+    EndingPanel.h
+    GamePanel.h
+    Loading.h
+    MyButton.h
+    ScorePanel.h
+)
+
 # 取出当前目录下的所有源文件
 set(SRC
     AnimationWindow.cpp
@@ -16,7 +29,7 @@ set(SRC
 )
 
 # 将当前目录下的所有源文件制作成静态库
-add_library(windows ${SRC})
+add_library(windows ${SRC} ${HEADERS})
 
 target_link_libraries(windows PRIVATE Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Widgets
