--- a/ReinventWheels/Grammar/Grammar.vcxproj
+++ b/ReinventWheels/Grammar/Grammar.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="Array.h" />
     <ClInclude Include="Emplace_back.h" />
+    <ClInclude Include="LRUCache.h" />
     <ClInclude Include="SharedPtr.h" />
     <ClInclude Include="Virtual.h" />
   </ItemGroup>
