--- a/Projects/DDZ-Network/Client-ddz/ddz-client/card/CMakeLists.txt
+++ b/Projects/DDZ-Network/Client-ddz/ddz-client/card/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.16)
 
 project(card)
 
+# 取出当前目录下的所有头文件
+set(HEADERS
+    Card.h
+    Cards.h
+)
+
 # 取出当前目录下的所有源文件
 set(SRC
     Card.cpp
@@ -9,6 +15,6 @@ set(SRC
 )
 
 # 将当前目录下的所有源文件制作成静态库
-add_library(card ${SRC})
+add_library(card ${SRC} ${HEADERS})
 
 target_link_libraries(card PRIVATE Qt${QT_VERSION_MAJOR}::Core)
