--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AbstractFactory.cpp" />
+    <ClCompile Include="Builder.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="SimpleFactory.cpp" />
     <ClCompile Include="Singleton.cpp" />
