--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="UML_hunter_example.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Builder.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
