--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="Builder.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Prototype.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
