--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="Adapter.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Bridge.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
