--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="Composite.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SingletonBase.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
