--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="MyList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Mediator.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyList.h">
