--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Flyweight.cpp" />
     <ClCompile Include="Iterator.h" />
     <ClCompile Include="Mediator.cpp" />
+    <ClCompile Include="Memento.cpp" />
     <ClCompile Include="MyList.cpp" />
     <ClCompile Include="Prototype.cpp" />
     <ClCompile Include="Proxy.cpp" />
