--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Observer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Strategy.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyList.h">
