--- a/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
+++ b/ObjectOriented/ObjectOriented/ObjectOriented.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="State.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TemplateMethod.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyList.h">
