--- a/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj.filters
+++ b/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="p01.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="p02.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
