--- a/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj
+++ b/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="p01.cpp" />
     <ClCompile Include="p02.cpp" />
+    <ClCompile Include="p03.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
