--- a/ReinventWheels/AsyncLogSystem/AsyncLogSystem.vcxproj.filters
+++ b/ReinventWheels/AsyncLogSystem/AsyncLogSystem.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Logger.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fmt\args.h">
