--- a/ReinventWheels/AsyncLogSystem/AsyncLogSystem.vcxproj
+++ b/ReinventWheels/AsyncLogSystem/AsyncLogSystem.vcxproj
@@ -105,10 +105,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalIncludeDirectories>E:\Code\Repository\C-CPP\ReinventWheels\AsyncLogSystem\fmt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>E:\Code\Repository\C-CPP\ReinventWheels\AsyncLogSystem\fmt\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>fmtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,20 +135,6 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="fmt\args.h" />
-    <ClInclude Include="fmt\base.h" />
-    <ClInclude Include="fmt\chrono.h" />
-    <ClInclude Include="fmt\color.h" />
-    <ClInclude Include="fmt\compile.h" />
-    <ClInclude Include="fmt\core.h" />
-    <ClInclude Include="fmt\format-inl.h" />
-    <ClInclude Include="fmt\format.h" />
-    <ClInclude Include="fmt\os.h" />
-    <ClInclude Include="fmt\ostream.h" />
-    <ClInclude Include="fmt\printf.h" />
-    <ClInclude Include="fmt\ranges.h" />
-    <ClInclude Include="fmt\std.h" />
-    <ClInclude Include="fmt\xchar.h" />
     <ClInclude Include="Logger.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
